Started implementing the game

--- a/static/styles/play_page.css
+++ b/static/styles/play_page.css
@@ -6,7 +6,6 @@
     position: absolute;
     background: rgba(22,56,27,0.8);
     color:lightgray;
-    display:none;
 }
 #player_card_wrapper{
     position: absolute;
@@ -115,6 +114,7 @@
     float:left;
     margin-left: 4.4%;
 }
+
 .playing_middle_card{
     display:inline-block;
     margin-left: 1.2%;
@@ -128,6 +128,7 @@
     display:inline-block;
     margin-left: 1.2%;
 }
+
 #troef_box{
     width:7vw;
     height:7vw;
@@ -147,4 +148,32 @@
 span {
   display: inline-block;
   vertical-align: middle;
+}
+#score_box{
+	position:absolute;
+	top:0;
+	left:0;
+	height:50vh;
+	width:10vw;
+	z-index:50;
+}
+#score_name_wrapper{
+    width: 100%;
+    height: 5%;
+}
+#score_value_wrapper{
+    width: 100%;
+    height: 94%;
+}
+.score_name_team{
+    width: 49%;
+    height: 100%;
+    float: left;
+    text-align: center;
+}
+.score_value_team{
+    width: 49%;
+    height: 100%;
+    float: left;
+    text-align: center;
 }
