--- a/templates/index.html
+++ b/templates/index.html
@@ -65,8 +65,8 @@
                 $('#table_name_input').val(data['game_name']);
                 $('#team_name_input').val(data['team_name']);
                 $('#player_name_input').val(data['player_name']);
-                $('#team_player_location_input').val(data['team_player_location_input']);
-                $('#team_location_input').val(data['team_location_input']);
+                $('#team_player_location_input').val(data['location_in_team']);
+                $('#team_location_input').val(data['location_of_team']);
                 $('#form_page').css('display','block');
                 $('#play_page').css('display','none');
                 $('#play_button').trigger('click');
@@ -114,6 +114,14 @@
             });
 
             socket.on('clear_board', function () {
+                //ONLY FOR TEST, otherwise board gets cleared after players
+
+                for(i = 0; i < 4; i++){
+                        $("#table_card" + i.toString() + "_top_wrapper").text("");
+                        $("#table_card" + i.toString() + "_bottom_wrapper").text("");
+                }
+
+                /*
                 setTimeout(function(){
                     console.log("clearing board");
                     for(i = 0; i < 4; i++){
@@ -122,16 +130,19 @@
                     }
 
                 }, 1000);
+                */
 
             });
 
-            socket.on('set_game_info', function(data){
+            socket.on('receive_play_cards', function(data){
                 //suits = ['H','D','C','S']
-                play_cards = data["cards"];
+                play_cards = data;
                 set_cards(play_cards);
-                $("#score_name_team0").text(data["teams"][0]);
-                $("#score_name_team1").text(data["teams"][1]);
+            });
 
+            socket.on('set_teams', function (data) {
+                $("#score_name_team0").text(data[0]);
+                $("#score_name_team1").text(data[1]);
             });
 
             socket.on('allow_viewing', function(data){
@@ -147,7 +158,7 @@
             //$(document).on('click', '#play_button', function()
 
             $("#play_button").click(function () {
-                socket.emit('player_info_send', {player_name: $('#player_name_input').val(), table_name: $('#table_name_input').val(),
+                socket.emit('player_info_send', {player_name: $('#player_name_input').val(), game_name: $('#table_name_input').val(),
                                                 location_in_team : $('#team_player_location_input').val(), team_name: $('#team_name_input').val(),location_of_team : $('#team_location_input').val()});
                 $("#info_wrapper").text($('#player_name_input').val() + '\n' + $('#team_name_input').val());
             });
@@ -199,6 +210,34 @@
                 choose_troef_allowed = true;
                 console.log("asked for troef");
                 give_command("Choose strike");
+            });
+            socket.on('update_score', function (data) {
+                console.log("updating scores")
+                team0_scores = data['team0'];
+                team1_scores = data['team1'];
+
+                team0_text = "";
+                team1_text = "";
+
+                for(i = 0; i < team0_scores.length - 1; i++){
+                    team0_text += "<del>" + team0_scores[i] + "</del><br>";
+                }
+
+                if(team0_scores.length > 0){
+                    team0_text += team0_scores[team0_scores.length - 1] ;
+                }
+
+                for(i = 0; i < team1_scores.length - 1; i++){
+                    team1_text +="<del>" +  team1_scores[i] + "</del><br>";
+                }
+
+                if(team1_scores.length > 0){
+                    team1_text += team1_scores[team1_scores.length - 1];
+                }
+
+                $("#score_value_team0").html(team0_text);
+                $("#score_value_team1").html(team1_text);
+
             });
 
         });
