--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,9 @@
     <title>Manillen</title>
     <meta http-equiv="expires" content="0">
 
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/general.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/form_page.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/play_page.css') }}">
+    <link rel="stylesheet" type="text/css" href="../static/styles/general.css">
+    <link rel="stylesheet" type="text/css" href="../static/styles/form_page.css">
+    <link rel="stylesheet" type="text/css" href="../static/styles/play_page.css">
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
@@ -248,7 +248,7 @@
 <div id="form_page">
 
     <div id="form_page_wrapper">
-        <div id="info_form_stylisticstop"><img src="{{ url_for('static',filename='images/topelement.png') }}"></div>
+        <div id="info_form_stylisticstop"><img src="../static/images/topelement.png"></div>
         <div id="info_form_wrapper">
 
                 Tafelnaam:<br><br><input type="text" name="table" id="table_name_input" class="semi-square" value="Burgie"><br><br>
@@ -268,7 +268,7 @@
                 <input type="submit" value="View" id="view_button" class=".semi-square ">
 
         </div>
-        <div id="info_form_stylisticsbottom"><img src="{{ url_for('static',filename='images/topelement.png') }}"></div>
+        <div id="info_form_stylisticsbottom"><img src="../static/images/topelement.png"></div>
     </div>
 
 </div>
